[package]
name = "create-windows-service-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3", features = ["psapi", "shellapi","handleapi","tlhelp32","winuser","winnls","winbase","wlanapi"]}
windows-service = "0.6.0"