[package]
name = "encoding-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.31"
log = "0.4.17"
chrono = "0.4.19"
anyhow = "1.0.62"
winapi = {version = "0.3", features = ["psapi", "shellapi","handleapi","tlhelp32","winuser","winnls"]}