[package]
name = "fltk-parent-handle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^1.3"
fltk-theme = "0.4"
winapi = {version = "0.3", features = ["psapi", "shellapi","handleapi","tlhelp32","winuser","winnls","winbase"]}