[package]
name = "rust-windows-service-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-service = "0.6.0"
log = "0.4.17"
fern = { version = "0.6", features = ["colored","date-based"] }
chrono = "0.4.19"