[package]
name = "simple-command-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
tokio = { version = "1", features = ["full"] }
axum = "0.6.1"
winapi = {version = "0.3", features = ["psapi", "shellapi","handleapi","tlhelp32","winuser","winnls"]}
encoding_rs = "0.8.31"
anyhow = "1.0.62"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4.19"