[package]
name = "ssh-tunnel-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.11", features = ["derive"] }
ssh2 = "0.9.4"
anyhow = "1"
log = "0.4.19"
ctrlc = "3"
fern = { version = "0.6", features = ["colored","date-based"] }
chrono = "0.4.19"