[package]
name = "ssh-tunnel-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.3" }
lazy_static = "1.4.0"
anyhow = "1.0.62"
chrono = "0.4.19"

[build-dependencies]
fl2rust = "0.4"
