[package]
name = "testheim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heim = {version = "0.1.0-rc.1", default-features = false, features = [ "process"] }
futures = "0.3.15"
anyhow = "1.0.62"
tokio = { version = "1.0", features = ["full"] }