[package]
name = "tokio-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
chrono = "0.4.23"
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["full"] }
futures-util = { version = "0.3.25", features = ["alloc", "sink"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
