[package]
name = "toml-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#toml = "0.5.9"
serde = { version = "1", features = ["derive"] }
#serde_derive = "1.0.144"
#lazy_static = "1.4.0"
wmi = "0.11.3"
anyhow = "1.0.62"
fs_extra = "1.2.0"
quick-xml = { version = "0.24.0", features = ["serialize", "overlapped-lists"] }