[package]
name = "xml-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.24.0", features = ["serialize","overlapped-lists"] }
serde = { version = "1.0", features = ["derive"] }
#serde-xml-rs = "0.6.0"