[package]
name = "ssh-tunnel-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh-tunnel-core = { path = "../ssh-tunnel-core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.11", features = ["derive"] }
log = "0.4.19"
fern = { version = "0.6", features = ["colored", "date-based"] }
chrono = "0.4.19"
anyhow = "1"

ctrlc-async = "3.2.2"
