[package]
name = "ssh-tunnel-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-ssh2-lite =  { version = "0.4.7", features = ["tokio"] }
async-std-resolver = "0.22.0"
log = "0.4.19"
anyhow = "1"