[package]
name = "ssh-tunnel-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.3" }
fltk-theme = "0.4"
lazy_static = "1.4.0"
anyhow = "1"
chrono = "0.4.19"
# expectrl = "0.6.0"
log = "0.4.19"
fern = { version = "0.6", features = ["colored", "date-based"] }
tokio = { version = "1", features = ["full"] }
ssh-tunnel-core = { path = "../ssh-tunnel-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
image = "0.24.6"


[build-dependencies]
fl2rust = "0.4"
winres = "0.1.12"
